Build 22 (19.11.2012)
- Added unit producing indicator on right panel. He not looks like an original one, but very similar.
- Added "Guardian" unit
- Added ability to demolish buildings
- Selection fixes

Build 21 (18.11.2012)
- New object drawing engine, that allows to draw units & building by layers
- New map cell structure that allows to place different types of units in single cell
- Producing "Construction Rig"
-- Known problems: 
	- Where is still no good algorithm for finding exit point. Sometimes units are stuck in buildings 
	- There is no progress indicator on right bar
- Added "Critical power" sound notification
- A lot of different bug fixes & structure changes
- Added sound notification queue
- Added "Training Facility" building
- Added "Assembly Plant" building

Build 20 (12.11.2012)
- More correct way to check building position
- Added energy indicator
- Added "Low power" sound notification, when power is too low
- Added "Taelon Power Generator" building (without Freighter). This is first animated building.
- Bugfix: Building selection when map view moved from top left corner
- Added addition Construction Rig to map

Build 19 (07.11.2012)
- Improved popup for units on building panel, now it shows required buildings too
- Added "Water Launch Pad" building (without Freighter)

Build 18 (06.11.2012)
- Added building and unit name when mouseover the object
- Added popup for units on building panel

Build 17 (05.11.2012)
- Some building based code optimizations
- Added new building: Camera Tower

Build 16 (18.10.2012)
- Finally added ability to build Headquarter, but still no option to produce new units.
- Project source code moved to GitHub

Build 15 (13.09.2012)
- Added ability to select building and choose place to build. But actually still no way to build it.

Build 14 (11.09.2012)
- Interface stop button now working
- Implemented "Can't move there" mouse cursor
- Implemented "Sell building" & "Power building" cursor and interface buttons