@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="js/sound_queue.js"></script>
 		<script type="text/javascript" src="js/energy.js"></script>
 		<script type="text/javascript" src="js/resources.js"></script>
+		<script type="text/javascript" src="js/minimap.js"></script>
 		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter.js"></script>
 		<script type="text/javascript" src="js/buildings/water_launch_pad.js"></script>
@@ -145,7 +146,8 @@
 				</div>
 				<div class="bottom-right">
 					<div class="map">
-						<canvas id="minimap" width="130" height="127"></canvas>
+						<canvas id="minimap_viewport" width="130" height="127"></canvas>
+						<canvas id="minimap_objects" width="130" height="127"></canvas>
 					</div>
 					<div class="resources">
 						<div class="switches"></div>
